# viator-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  scraper.py  test.py
json_dumps/: .gitignore  activities_raw.json  attractions.json  complete_raw_data.json
viator_scraper/: city_scraper.ipynb  sitewide_crawler.py
